2009-10-02  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.am: Add armcc/arm_v6.h, msftc/arm.h,
	msftc/common32_defs.h, sunc/x86.h sunc/x86_64.h entries; order all
	entries alphabetically.
	* Makefile.in: Regenerate.

2009-10-01  Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using libtool-2.2,
	automake-1.10.2, autoconf-2.64).
	* INSTALL: Ditto.
	* Makefile.in: Ditto.
	* aclocal.m4: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* missing: Ditto.
	* mkinstalldirs: Ditto.
	* doc/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/atomic_ops/Makefile.in: Ditto.
	* src/atomic_ops/sysdeps/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.

2009-10-01  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/x86.h: Remove spaces preceding '#'
	for the preprocessor directives.
	* src/atomic_ops/sysdeps/sunc/x86.h: Ditto.

2009-09-30  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* README: Move notes from the hand-edited part of INSTALL which
	was overwritten by Automake recently.

2009-09-26  Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif).
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* INSTALL: Ditto.
	* Makefile.in: Ditto.
	* doc/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/atomic_ops/Makefile.in: Ditto.
	* src/atomic_ops/sysdeps/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.

2009-09-25  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Replace AC_PROG_CC with AM_PROG_CC_C_O.

2009-09-16  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: Remove trailing spaces at EOLn.
	* doc/README.txt: Expand all tabs to spaces; remove trailing
	spaces at EOLn; remove multiple trailing blank lines.
	* src/atomic_ops.c: Ditto.
	* src/atomic_ops.h: Ditto.
	* src/atomic_ops/generalize-small.h: Ditto.
	* src/atomic_ops/generalize.h: Ditto.